--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     /* Header */
     header {
       border-bottom: 1px solid #f0f0f0;
+      background-color: #fff;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
 
     .header-inner {
@@ -147,6 +151,9 @@
       align-items: center;
       gap: 0.3rem;
       cursor: pointer;
+      padding: 4px 8px;
+      border-radius: 999px;
+      background-color: #ffffffee;
     }
 
     .cart-icon {
@@ -159,6 +166,7 @@
       justify-content: center;
       font-size: 1.1rem;
       color: var(--rosa-principal);
+      background-color: #ffffffee;
     }
 
     .social {
@@ -174,6 +182,7 @@
       height: 34px;
       border-radius: 50%;
       border: 2px dashed var(--rosa-principal);
+      background-color: #ffffffee;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -1690,7 +1699,21 @@ const urls = [
               el.textContent = data[key];
             }
           });
-        } catch (e) {
+
+          var headerEl = document.querySelector('header');
+          if (headerEl) {
+            if (data.bgImage) {
+              headerEl.style.backgroundImage = 'url(' + data.bgImage + ')';
+              headerEl.style.backgroundSize = 'cover';
+              headerEl.style.backgroundPosition = 'center';
+              headerEl.style.backgroundRepeat = 'no-repeat';
+            } else {
+              headerEl.style.backgroundImage = '';
+              headerEl.style.backgroundColor = '#fff';
+            }
+          }
+        }
+        catch (e) {
           console && console.warn && console.warn('Error applying hero config', e);
         }
       }
