--- a/bears.html
+++ b/bears.html
@@ -55,10 +55,6 @@
     /* Header */
     header {
       border-bottom: 1px solid #f0f0f0;
-      background-color: #fff;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
     }
 
     .header-inner {
@@ -151,6 +147,9 @@
       align-items: center;
       gap: 0.3rem;
       cursor: pointer;
+      padding: 4px 8px;
+      border-radius: 999px;
+      background-color: #ffffffee;
     }
 
     .cart-icon {
@@ -163,6 +162,7 @@
       justify-content: center;
       font-size: 1.1rem;
       color: var(--rosa-principal);
+      background-color: #ffffffee;
     }
 
     .social {
@@ -178,6 +178,7 @@
       height: 34px;
       border-radius: 50%;
       border: 2px dashed var(--rosa-principal);
+      background-color: #ffffffee;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -1677,21 +1678,7 @@ const urls = [
               el.textContent = data[key];
             }
           });
-
-          var headerEl = document.querySelector('header');
-          if (headerEl) {
-            if (data.bgImage) {
-              headerEl.style.backgroundImage = 'url(' + data.bgImage + ')';
-              headerEl.style.backgroundSize = 'cover';
-              headerEl.style.backgroundPosition = 'center';
-              headerEl.style.backgroundRepeat = 'no-repeat';
-            } else {
-              headerEl.style.backgroundImage = '';
-              headerEl.style.backgroundColor = '#fff';
-            }
-          }
-        }
-        catch (e) {
+        } catch (e) {
           console && console.warn && console.warn('Error applying hero config', e);
         }
       }
