--- a/Checkout.html
+++ b/Checkout.html
@@ -243,7 +243,7 @@ footer{
         <input type="radio" name="fulfilment" id="opt-pickup" value="pickup">
         <div>
           <div class="label">Pickup <span class="badge">Free</span></div>
-          <div class="sub">Shopping Centre Athenry Prospect Unit 11B - H65 VA48</div>
+          <div class="sub">Centrepoint apartament Tuam roud H91 H308</div>
         </div>
       </label>
     </div>
@@ -355,7 +355,7 @@ function initFulfilmentUI(){
 
   function updateInfo(){
     info.textContent = (fulfilment === 'pickup')
-      ? 'Pickup at: Shopping Centre Athenry Prospect Unit 11B - H65 VA48'
+      ? 'Pickup at: Centrepoint apartament Tuam roud H91 H308'
       : 'Estimated delivery time: 7 to 10 business days.';
   }
 
